fix bug logo on mobile

--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -2833,7 +2833,7 @@ h2.block-header.block-brown {
 @media screen and (max-width: 374px) {
     .logo-cafemercad {
         width: 100px;
-        margin-top: 25px;
+        margin-top: 23px;
     }
 }
 
